@@ -1,3 +1,9 @@
 = Release notes v.11.6
 
 == Table of Contents
+
+* Fixed NPE for get transactions list without get account list
+
+== Fixed NPE for get transactions list without get account list
+
+From now on, for get transaction list request with incorrect account id, the response will be `400 FORMAT_ERROR_UNKNOWN_ACCOUNT`.
